# pocket-pace

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COMMIT-MESSAGE.md  README.md  compose.yml  pyproject.toml  startup.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile
scripts/: commit-msg.py  sync-version.py
setup/: run.bat  run.sh  setup_all.sh  setup_docker.sh  setup_github.sh  startup.sh
setup/init/: setup.bat  setup.sh
src/: hello.py  main.py
src/db/: database.py
src/domain/models/: setting_model.py  transaction_model.py  user_model.py
src/domain/services/: alert_service.py  auth_service.py  budget_service.py  setting_service.py  transaction_service.py
src/presentation/tui/: app.py
src/presentation/tui/pages/: history_page.py  home_page.py  report_page.py  settings_page.py
src/shared/: config.py  security.py
