[project]
name = "pocket-pace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "flet[all]>=0.27.4",
    "nest-asyncio>=1.6.0",
    "pre-commit>=4.1.0",
    "questionary>=2.1.0",
    "toml>=0.10.2",
]
